--- a/.codefresh/codefresh-dvts.yml
+++ b/.codefresh/codefresh-dvts.yml
@@ -61,7 +61,9 @@ steps:
         command: bash -c 'IFS=" " read -a browserarray <<< "${{BROWSERS}}" && for browser in "$${browserarray[@]}"; do BROWSER=$$browser python -m pytest -vvv --alluredir=${{CF_VOLUME_PATH}}/allure-results ./tests/selenium/test_app.py; done'
         volumes:
           - '${{CF_VOLUME_NAME}}:/codefresh/volume'
-  GenerateTestReporting:
-    title: Generating Test Reporting
-    image: codefresh/cf-docker-test-reporting
-    working_directory: '${{CF_VOLUME_PATH}}/'
+
+# See https://codefresh.io/docs/docs/testing/test-reports to setup test reporting.  Tests above already in correct folder just need to add storage integration to this pipeline and uncomment steps below.
+  # GenerateTestReporting:
+  #   title: Generating Test Reporting
+  #   image: codefresh/cf-docker-test-reporting
+  #   working_directory: '${{CF_VOLUME_PATH}}/'
