--- a/codefresh.yml
+++ b/codefresh.yml
@@ -39,7 +39,7 @@ steps:
     stage: "Deploy Codefresh Pipelines"
     working_directory: ./.codefresh/specs
     commands:
-      - sed -i \'s/CF_REPO_OWNER/${{CF_REPO_OWNER}}/g\' *
-      - sed -i \'s/KUBERNETES_CLUSTER_NAME/${{KUBERNETES_CLUSTER_NAME}}/g\' *
-      - sed -i \'s/KUBERNETES_NAMESPACE/${{KUBERNETES_NAMESPACE}}/g\' *
+      - sed -i 's/CF_REPO_OWNER/${{CF_REPO_OWNER}}/g' *
+      - sed -i 's/KUBERNETES_CLUSTER_NAME/${{KUBERNETES_CLUSTER_NAME}}/g' *
+      - sed -i 's/KUBERNETES_NAMESPACE/${{KUBERNETES_NAMESPACE}}/g' *
       - codefresh create -f .
