--- a/codefresh.yml
+++ b/codefresh.yml
@@ -42,4 +42,4 @@ steps:
       - sed -i 's/CF_REPO_OWNER/${{CF_REPO_OWNER}}/g' *
       - sed -i 's/KUBERNETES_CLUSTER_NAME/${{KUBERNETES_CLUSTER_NAME}}/g' *
       - sed -i 's/KUBERNETES_NAMESPACE/${{KUBERNETES_NAMESPACE}}/g' *
-      - codefresh create -f .
+      - find . -iname '*.yaml' -exec codefresh create -f {} \;
