adding in change for pr from fork

--- a/.codefresh/specs/cd.yaml
+++ b/.codefresh/specs/cd.yaml
@@ -17,7 +17,7 @@ spec:
         - pullrequest.reopened
         - pullrequest.synchronize
         - release
-      pullRequestAllowForkEvents: false
+      pullRequestAllowForkEvents: true
       commentRegex: /.*/gi
       branchRegex: /.*/gi
       branchRegexInput: regex
