--- a/.codefresh/codefresh-dvts.yml
+++ b/.codefresh/codefresh-dvts.yml
@@ -19,7 +19,7 @@ steps:
       version: '2'
       services:
         selenium_hub:
-          image: selenium/hub:latest
+          image: selenium/hub:3.13.0
           ports:
             - 4444
           environment:
@@ -40,6 +40,7 @@ steps:
             - NODE_MAX_INSTANCES=5
         firefox_node:
           image: selenium/node-firefox:latest
+          user: $(id -u):$(id -g)
           ports:
             - 5900
             - 5555
