--- a/.codefresh/codefresh-dvts.yml
+++ b/.codefresh/codefresh-dvts.yml
@@ -40,7 +40,7 @@ steps:
             - NODE_MAX_INSTANCES=5
         firefox_node:
           image: selenium/node-firefox:latest
-          user: $(id -u):$(id -g)
+          user: 1000:1000
           ports:
             - 5900
             - 5555
