--- a/.codefresh/specs/pr-cleanup.yaml
+++ b/.codefresh/specs/pr-cleanup.yaml
@@ -14,7 +14,7 @@ spec:
       repo: CF_REPO_OWNER/example-voting-app
       events:
         - pullrequest.closed
-      pullRequestAllowForkEvents: false
+      pullRequestAllowForkEvents: true
       commentRegex: /.*/gi
       branchRegex: /.*/gi
       provider: github
